# gengol

./: CHANGELOG.md  LICENSE  README.md  gengol.cabal
app/: Main.hs
src/: GenGol.hs
src/GenGol/: Grid.hs  Types.hs
