cabal-version:      2.4
name:               gengol
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             monoidcat
maintainer:         monoidcat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common defaults
    build-depends:    base ^>=4.14.1.0
                    , vector
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                        OverloadedLists
                        DerivingStrategies
                        DeriveFunctor
                        RankNTypes
                        ScopedTypeVariables
                        ViewPatterns
                        DerivingVia
                        GeneralizedNewtypeDeriving
                        DataKinds
                        DeriveGeneric
                        TypeOperators

library
    import: defaults
    hs-source-dirs:   src
    build-depends:    random
    exposed-modules:  GenGol
                      GenGol.Grid
                      GenGol.Types

executable gengol
    import: defaults
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    gloss
                    , transformers
                    , mtl
                    , gengol
                    , optparse-generic
    ghc-options:      -threaded
